--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "lucide-react": "^0.484.0",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "paystack-sdk": "^2.5.19",
     "postcss": "^8.5.3",
