--- a/functions/package.json
+++ b/functions/package.json
@@ -1,29 +1,30 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "20"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
-    "@google-cloud/storage": "^7.16.0",
-    "firebase-admin": "^13.2.0",
-    "firebase-functions": "^6.3.2",
-    "firebase-functions-test": "^3.4.1",
-    "nodemailer": "^6.10.1",
-    "resend": "^4.2.0"
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.17",
-    "typescript": "^5.2.2"
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.4.5"
   },
   "private": true
 }
