--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "lucide-react": "^0.484.0",
     "next": "^15.3.1",
     "next-themes": "^0.4.6",
