--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.484.0",
     "next": "^15.3.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "paystack-sdk": "^2.5.19",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
