--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
